--- a/Simple_inventory/nbproject/project.properties
+++ b/Simple_inventory/nbproject/project.properties
@@ -27,13 +27,17 @@ dist.dir=dist
 dist.jar=${dist.dir}/Simple_inventory.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
+file.reference.jdatepicker-1.3.2.jar=../../../../Downloads/jdatepicker-1.3.2.jar
+file.reference.jdatepicker-2.0.3.jar=../../../../Downloads/jdatepicker-2.0.3.jar
 file.reference.rs2xml.jar=..\\..\\..\\..\\Downloads\\rs2xml\\rs2xml.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${libs.MySQLDriver.classpath}:\
     ${libs.absolutelayout.classpath}:\
-    ${file.reference.rs2xml.jar}
+    ${file.reference.rs2xml.jar}:\
+    ${file.reference.jdatepicker-1.3.2.jar}:\
+    ${file.reference.jdatepicker-2.0.3.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
